Update QuizResponse Dto
