# frontend-quiz-app.Server/DTOs/QuizResponse.cs
@@ -1,8 +1,13 @@
-﻿namespace frontend_quiz_app.Server.DTOs
+﻿using frontend_quiz_app.Server.DTOs.Enums;
+
+namespace frontend_quiz_app.Server.DTOs
 {
     public class QuizResponse
     {
+        public byte? Order { get; set; }
         public required string Question { get; set; }
-        public required string EncodedAnswer { get; set;}
+        public required List<string> Options { get; set; }
+        public required string EncodedAnswer { get; set; }
+        public required EQuizCategory Category { get; set; }
     }
 }
